--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@react-three/fiber": "^8.18.0",
     "@reduxjs/toolkit": "^2.11.2",
     "@studio-freight/lenis": "^1.0.42",
+    "@supabase/supabase-js": "^2.93.3",
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -53,6 +54,8 @@
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "input-otp": "^1.4.2",
+    "jwt-decode": "^4.0.0",
+    "keycloak-js": "^26.2.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -73,8 +76,6 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.181.2",
     "vaul": "^0.9.9",
-    "jwt-decode": "^4.0.0",
-    "keycloak-js": "^26.2.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
