--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
-    "html2pdf.js": "^0.10.2",
+    "html2pdf.js": "^0.14.0",
     "input-otp": "^1.4.2",
     "jwt-decode": "^4.0.0",
     "keycloak-js": "^26.2.2",
@@ -82,6 +82,7 @@
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/html2pdf.js": "^0.10.0",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
