--- a/nginx.conf
+++ b/nginx.conf
@@ -13,4 +13,15 @@ server {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
+
+    # API calls to Deno on the VM
+    location /api/ {
+        proxy_pass http://127.0.0.1:8000/;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
